[package]
name = "rox"
version = "0.1.0"
authors = ["Mikael Mello <git@mikaelmello.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug_trace_execution"]
debug_trace_execution = []

[dependencies]
clap = "3.0.0-beta.2"
thiserror = "1"
unicode_reader = "1.0.1"
rustyline = "8.2.0"